--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -77,14 +77,44 @@ a:hover {
 
 /* Relative lengths */
 
-div {
+/* div {
     font-size: 20px;
     border: 1px solid black;
     padding: 10px;
     width: 50vw;
     height: 50vh;
+} */
+
+/* span {
+    font-size: 3rem;
+} */
+
+/* html {
+    box-sizing: border-box;
 }
 
-span {
-    font-size: 3rem;
+.box {
+    box-sizing: border-box;
+    width: 300px;
+    height: 150px;
+    margin: 10px;
+    padding: 30px;
+    border: 5px solid black;
+} */
+
+.wrapper-typography {
+    border: 1px solid black;
+    border-radius: 17px;
+}
+
+.text {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-style: oblique;
+    font-weight: 700;
+    font-variant: small-caps;
+    font-size: 2rem;
+    line-height: 36px;
+    text-align: center;
+    text-decoration: underline;
+    text-decoration: line-through;
 }
