--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -114,7 +114,39 @@ a:hover {
     font-variant: small-caps;
     font-size: 2rem;
     line-height: 36px;
-    text-align: center;
-    text-decoration: underline;
-    text-decoration: line-through;
+    /* text-align: center; */
+    /* text-decoration: underline; */
+    /* text-decoration: line-through; */
+    /* letter-spacing: 2rem; */
+    /* word-spacing: 3rem; */
+    /* text-shadow: 2px 2px 3px black; */
+    /* direction: rtl; */
+    /* white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; */
+}
+
+.box {
+    height: 200px;
+    width: 200px;
+    background-color: green;
+
+    /* position: static; */
+
+}
+
+.box1 {
+    height: 200px;
+    width: 200px;
+    background-color: blue;
+    /* position: relative; */
+    top: 30px;
+    left: 50px;
+    /* right: 50px; */
+    position: absolute;
+}
+
+.wrapper {
+    display: flex;
+    /* position: relative; */
 }
